@@ -40,10 +40,27 @@ package body Ada.Containers.Multiway_Trees is
       From_Root : Boolean;
    end record;
 
+   type Child_Iterator is new Tree_Iterator_Interfaces.Reversible_Iterator with
+   record
+      Container : Tree_Access;
+      Position  : Cursor;
+   end record;
+
    overriding function First (Object : Iterator) return Cursor;
    overriding function Next
      (Object : Iterator;
       Position : Cursor) return Cursor;
+
+   overriding function First (Object : Child_Iterator) return Cursor;
+   overriding function Next
+     (Object : Child_Iterator;
+      Position : Cursor) return Cursor;
+
+   overriding function Previous
+     (Object : Child_Iterator;
+      Position : Cursor) return Cursor;
+
+   overriding function Last (Object : Child_Iterator) return Cursor;
 
    -----------------------
    -- Local Subprograms --
@@ -912,6 +929,11 @@ package body Ada.Containers.Multiway_Trees is
       return Object.Position;
    end First;
 
+   function First (Object : Child_Iterator) return Cursor is
+   begin
+      return (Object.Container, Object.Position.Node.Children.First);
+   end First;
+
    -----------------
    -- First_Child --
    -----------------
@@ -1412,6 +1434,16 @@ package body Ada.Containers.Multiway_Trees is
       end loop;
    end Iterate_Children;
 
+   function Iterate_Children
+     (Container : Tree;
+      Parent    : Cursor)
+     return Tree_Iterator_Interfaces.Reversible_Iterator'Class
+   is
+      pragma Unreferenced (Container);
+   begin
+      return Child_Iterator'(Parent.Container, Parent);
+   end Iterate_Children;
+
    ---------------------
    -- Iterate_Subtree --
    ---------------------
@@ -1468,13 +1500,21 @@ package body Ada.Containers.Multiway_Trees is
       Iterate_Children (Container, Subtree, Process);
    end Iterate_Subtree;
 
+   ----------
+   -- Last --
+   ----------
+
+   overriding function Last (Object : Child_Iterator) return Cursor is
+   begin
+      return (Object.Container, Object.Position.Node.Children.Last);
+   end Last;
+
    ----------------
    -- Last_Child --
    ----------------
 
    function Last_Child (Parent : Cursor) return Cursor is
       Node : Tree_Node_Access;
-
    begin
       if Parent = No_Element then
          raise Constraint_Error with "Parent cursor has no element";
@@ -1588,10 +1628,24 @@ package body Ada.Containers.Multiway_Trees is
          end if;
 
       else
-
          --  If an internal node, return its first child.
 
          return (Object.Container, N.Children.First);
+      end if;
+   end Next;
+
+   function Next
+     (Object : Child_Iterator;
+      Position : Cursor) return Cursor
+   is
+      C : constant Tree_Node_Access := Position.Node.Next;
+
+   begin
+      if C = null then
+         return No_Element;
+
+      else
+         return (Object.Container, C);
       end if;
    end Next;
 
@@ -1713,6 +1767,25 @@ package body Ada.Containers.Multiway_Trees is
 
       Container.Count := Container.Count + Count;
    end Prepend_Child;
+
+   --------------
+   -- Previous --
+   --------------
+
+   overriding function Previous
+     (Object : Child_Iterator;
+      Position : Cursor) return Cursor
+   is
+      C : constant Tree_Node_Access := Position.Node.Prev;
+
+   begin
+      if C = null then
+         return No_Element;
+
+      else
+         return (Object.Container, C);
+      end if;
+   end Previous;
 
    ----------------------
    -- Previous_Sibling --
