@@ -1,3 +1,12 @@
+2011-09-27  Robert Dewar  <dewar@adacore.com>
+
+	* exp_ch9.adb: Minor comment fixes.
+
+2011-09-27  Ed Schonberg  <schonberg@adacore.com>
+
+	* a-comutr.adb, a-comutr.ads: Add children iterators on multiway
+	trees.
+
 2011-09-27  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* checks.adb (Apply_Scalar_Range_Check): Use Designated_Type
